--- a/VanillaJS/plugins_js/index.html
+++ b/VanillaJS/plugins_js/index.html
@@ -25,24 +25,8 @@
     </div>
 
     <!-- Наше модальное окно -->
-    <div class="wmodal">
-        <div class="modal-overlay">
-            <div class="modal-window">
-                <div class="modal-header">
-                    <span class="modal-title">Modal window</span>
-                    <span class="modal-close">&times;</span>
-                </div>
-                <div class="modal-body">
-                    <p>Lorem ipsum dolor sit.</p>
-                    <p>Lorem ipsum dolor sit.</p>
-                </div>
-                <div class="modal-footer">
-                    <button>Ok</button>
-                    <button>Cancel</button>
-                </div>
-            </div>
-        </div>
-    </div>
+    <!-- перенесено в modal.js в системную функцию _createModal -->
+    <!-- <div class="wmodal"></div> -->
 
 
     <!-- Базовый объект, к которому, в дальнейшем, будем подключать различные плагины -->
