--- a/VanillaJS/plugins_js/index.html
+++ b/VanillaJS/plugins_js/index.html
@@ -34,7 +34,7 @@
     <!-- Плагины. Подключаем после base, чтобы в плагинах был доступен объект $ -->
     <script src="plugins/modal.js"></script>
     <!-- Само приложение -->
-    <script src="index.html"></script>
+    <script src="index.js"></script>
 </body>
 
 </html>
