--- a/VanillaJS/plugins_js/index.html
+++ b/VanillaJS/plugins_js/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container">
         <h1>Plugins vanilla JS</h1>
-        <div class="row">
+        <!-- <div class="row">
             <div class="col">
                 <div class="card">
                     <img class="card-img-top" style="height: 250px;"
@@ -48,7 +48,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
 
     <!-- Наше модальное окно -->
