arrows this in classes/objects

--- a/VanillaJS/index.html
+++ b/VanillaJS/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="B_Arrow_func.js"></script>
+    <script src="B_classes.js"></script>
   </body>
 </html>
